# facet

./: CHANGELOG.md  Cargo.toml  Dockerfile
.github/scripts/: package.json
.github/workflows/: issue-labeler.yml  release-plz.yml  test.yml  website.yml
cinereus/: Cargo.toml
docs/content/guide/: ecosystem.md
docs/meta/: package.json  pnpm-lock.yaml
facet/: Cargo.toml
facet-args/: Cargo.toml
facet-asn1/: Cargo.toml
facet-assert/: Cargo.toml
facet-atom/: Cargo.toml
facet-axum/: Cargo.toml
facet-bloatbench/: Cargo.toml
facet-core/: Cargo.toml
facet-core/src/impls/core/: net.rs
facet-core/src/types/: scalar.rs
facet-csv/: Cargo.toml
facet-default/: Cargo.toml
facet-diff/: Cargo.toml
facet-diff-core/: Cargo.toml
facet-error/: Cargo.toml
facet-format/: Cargo.toml
facet-format-suite/: Cargo.toml
facet-format-suite/src/: lib.rs
facet-format/src/: serializer.rs
facet-html/: Cargo.toml
facet-html-dom/: Cargo.toml
facet-json/: Cargo.toml
facet-json-schema/: Cargo.toml
facet-kdl/: Cargo.toml
facet-macro-parse/: Cargo.toml
facet-macro-types/: Cargo.toml
facet-macros/: Cargo.toml
facet-macros-impl/: Cargo.toml
facet-miette/: Cargo.toml
facet-msgpack/: Cargo.toml
facet-path/: Cargo.toml
facet-perf-shootout/: Cargo.toml
facet-postcard/: Cargo.toml
facet-postcard/src/: serialize.rs
facet-postcard/tests/: external_types.rs  roundtrip.rs
facet-pretty/: Cargo.toml
facet-reflect/: Cargo.toml
facet-shapelike/: Cargo.toml
facet-showcase/: Cargo.toml
facet-singularize/: Cargo.toml
facet-solver/: Cargo.toml
facet-svg/: Cargo.toml
facet-testhelpers/: Cargo.toml
facet-testhelpers-macros/: Cargo.toml
facet-tokio-postgres/: CHANGELOG.md  Cargo.toml
facet-toml/: Cargo.toml
facet-typescript/: Cargo.toml
facet-urlencoded/: Cargo.toml
facet-validate/: CHANGELOG.md  Cargo.toml
facet-value/: Cargo.toml
facet-xdr/: Cargo.toml
facet-xml/: Cargo.toml
facet-yaml/: Cargo.toml
facet/tests/: value_vtable_facts.rs
tools/perf-index-generator/: Cargo.toml
xtask/: Cargo.toml
